# MetaForge

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  setup.cfg  setup.py
MetaForge/problems/: jobshop.py
MetaForge/solvers/: genetic_algorithm.py
data/benchmarks/: ft06.txt  ft10.txt  ft20.txt  la01.txt  la02.txt  la03.txt  la04.txt  la05.txt  la06.txt  la08.txt  la09.txt  la10.txt  la11.txt  la12.txt  la13.txt  la14.txt  la17.txt
docs/: datasets.md  development.md  solvers.md  usage.md
docs/solvers/: ant_colony_optimization.md  dqn.md  genetic_algorithm.md  neuroevolution.md  q_learning.md  simulated_annealing.md  tabu_search.md
metaforge-test-env/: pyvenv.cfg
metaforge-test-env/Scripts/: activate  activate.bat
notebooks/: MetaForge_Colab_Demo.ipynb  MetaForge_Compare_Solvers.ipynb  MetaForge_Complete_Testing.ipynb  MetaForge_Example.ipynb  MetaForge_Quick_Start.ipynb  MetaForge_Testing_Colab.ipynb  example_jobshop.ipynb
results/: test_output.csv
src/metaforge/: metaforge_runner.py
src/metaforge/cli/: main_compare.py
src/metaforge/problems/: benchmark_loader.py  jobshop.py
src/metaforge/solvers/: ant_colony.py  dqn_dyn.py  dqn_solver.py  neuroevolution_solver.py  q_learning.py  simulated_annealing.py  tabu_search.py
src/metaforge/utils/: compare_solvers.py  plotting.py  pretty_names.py  timer.py  visualization.py
tests/: test_compare_solvers.py  test_dqn.py
